--- a/package.json
+++ b/package.json
@@ -12,8 +12,19 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@tanstack/react-query": "^5.40.0",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
