--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "jodit-react": "^4.1.2",
@@ -22,6 +23,7 @@
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
