--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@stripe/react-stripe-js": "^2.7.1",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
@@ -28,8 +29,11 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
+    "react-stripe-js": "^1.1.5",
     "sort-by": "^1.2.0",
+    "stripe": "^15.9.0",
     "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
